Added some html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<meta content="IE=edge" http-equiv="X-UA-Compatible">
+<title>Andrea Wetzel</title>
+<meta content="" name="description">
+<meta content="width=device-width, initial-scale=1" name="viewport">
+<link href="favicon.ico" rel="shortcut icon" type="image/x-icon"/>
+<link href="apple-touch-icon-76x76.png" rel="apple-touch-icon" sizes="76x76"/>
+<link href="apple-touch-icon-120x120.png" rel="apple-touch-icon" sizes="120x120"/>
+<link href="apple-touch-icon-152x152.png" rel="apple-touch-icon" sizes="152x152"/>
+<link href="chrome-icon-192x192.png" rel="icon" sizes="192x192">
+<link href="css/main.css" rel="stylesheet">
+</head>
+<body>
+
+<h1>GitHub Pages</h1>
+<p>Check back soon for more information</p>
+
+</body>
+</html>
