added link to home page

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-
-<h1>GitHub Pages</h1>
-<p>Check back soon for more information</p>
-
+<div class="content">
+    <h1>Andrea Wetzel</h1>
+    <h2>Madison, WI Front End Web Developer</h2>
+    <p>For more information, visit <a href="http://www.andreawetzel.com">andreawetzel.com</a></p>
+</div>
 </body>
 </html>
