--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta content="IE=edge" http-equiv="X-UA-Compatible">
-<title>Andrea Wetzel</title>
+<title>Andrea Roenning</title>
 <meta content="" name="description">
 <meta content="width=device-width, initial-scale=1" name="viewport">
 <link href="favicon.ico" rel="shortcut icon" type="image/x-icon"/>
@@ -15,9 +15,9 @@
 </head>
 <body>
 <div class="content">
-    <h1>Andrea Wetzel</h1>
+    <h1>Andrea Roenning</h1>
     <h2>Madison, WI Front End Web Developer</h2>
-    <p>For more information, visit <a href="http://www.andreawetzel.com">andreawetzel.com</a></p>
+    <p>For more information, visit <a href="http://www.andrearoenning.com">andrearoenning.com</a></p>
 </div>
 </body>
 </html>
